After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695759 - Didn't migrate my colour palette
Didn't migrate my colour palette
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-13 11:51 UTC by Bastien Nocera
Modified: 2013-03-13 14:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2013-03-13 11:51:46 UTC
I've used the same colour palette for my terminal for ages (I have a script for GConf-ified gnome-terminal, and even a keyfile from gnome 1 ;)

gconftool-2 --set "/apps/gnome-terminal/profiles/Default/palette" --type string "#000000:#640f19:#63796b:#ad7142:#4f4f89:#b25c7c:#52756b:#adaaad:#525552:#a56163:#73ae70:#cec263:#36709f:#aa829c:#518989:#ffffef"
gconftool-2 --set "/apps/gnome-terminal/profiles/Default/background_color" --type string "#000000"
gconftool-2 --set "/apps/gnome-terminal/profiles/Default/foreground_color" --type string "#adaaad"

Only the last 2 items got migrated (as visible in dconf-editor).
Comment 1 Christian Persch 2013-03-13 14:23:02 UTC
Should be fixed on master; please test.