migration: Fix migration of the colour palette

https://bugzilla.gnome.org/show_bug.cgi?id=695759